# substrate-archive

./: Cargo.toml
archive-core/: error.rs  lib.rs  rpc.rs  types.rs
polkadot-archive/: Cargo.toml
polkadot-archive/src/: main.rs  plain_types.rs
src/: archive.rs  database.rs  error.rs  extrinsics.rs  frame_ext.rs  lib.rs  main.rs  metadata.rs  paint_ext.rs  queries.rs  rpc.rs  state_manager.rs  storage_archive.rs  types.rs
src/archive/: blocks_archive.rs  storage_archive.rs
src/database/: db_middleware.rs  models.rs  schema.rs
src/metadata/: subxt_metadata.rs
src/rpc/: substrate_rpc.rs
src/types/: traits.rs
