[package]
name = "substrate-archive"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
futures01 = { version = "0.1", optional = true }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
failure = "0.1"
jsonrpc-core-client = { version = "13.1.0", features = ["http", "ws"] }
jsonrpc-pubsub = { version = "13.1.0" }
substrate-subxt = { path = "../substrate-subxt" }
tokio = "0.1"
node-runtime = { git = "https://github.com/paritytech/substrate", package = "node-runtime" }
srml-system = { git = "https://github.com/paritytech/substrate", package = "srml-system" }
srml-balances = { git = "https://github.com/paritytech/substrate", package = "srml-balances" }

sr-primitives = { git = "https://github.com/paritytech/substrate", package = "sr-primitives" }
