[package]
name = "polkadot-archive"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-archive = { path = "../" }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", package = "polkadot-runtime", tag = "v0.5.1" }
node-primitives = { git = "https://github.com/paritytech/substrate/", package = "node-primitives"}
sr-primitives = { git = "https://github.com/paritytech/substrate/", package = "sr-primitives" }


